--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.10"
   }
 }
-
