--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,45 @@
 {
   "name": "charityguard-backend",
   "version": "1.0.0",
-  "description": "Backend server for the CharityGuard fraud detection platform",
+  "description": "AI-powered fraud detection API for charitable donations",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "health-check": "curl http://localhost:3001/health"
   },
-  "keywords": [
-    "express",
-    "backend",
-    "charityguard",
-    "fraud-detection"
-  ],
-  "author": "Your Name <your.email@example.com>",
-  "license": "MIT",
   "dependencies": {
+    "express": "^4.19.2",
+    "mongoose": "^8.5.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "mongodb": "^6.18.0",
-    "mongoose": "^8.17.1"
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.4.0",
+    "express-validator": "^7.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^16.8.0",
+    "winston": "^3.14.2",
+    "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
+    "express-mongo-sanitize": "^2.2.0",
+    "hpp": "^0.2.3",
+    "xss-clean": "^0.1.4",
+    "express-slow-down": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.4",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "eslint": "^8.57.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
