--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,108 @@
-node_modules/
+# ============================================
+# CRITICAL: Environment Variables & Secrets
+# ============================================
 .env
-__pycache__/
-*.pyc
+.env.*
+*.env
+.env.local
+.env.development
+.env.production
+backend/.env
+frontend/.env
+charityguard-frontend/.env
+
+# ============================================
+# Dependencies (LARGE FILES - DO NOT COMMIT)
+# ============================================
+node_modules/
+*/node_modules/
+backend/node_modules/
+frontend/node_modules/
+charityguard-frontend/node_modules/
+package-lock.json
+*/package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# ============================================
+# Build Outputs
+# ============================================
+build/
+dist/
+*/build/
+*/dist/
+.next/
+out/
+.cache/
+
+# ============================================
+# Database & Data Files
+# ============================================
+*.db
+*.sqlite
+*.sqlite3
+data/
+*/data/
+backend/data/
+uploads/
+*.dump
+
+# ============================================
+# Logs
+# ============================================
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# ============================================
+# OS Files
+# ============================================
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.swp
+*.swo
+*~
+
+# ============================================
+# IDE & Editors
+# ============================================
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.project
+.classpath
+.settings/
+
+# ============================================
+# Testing & Coverage
+# ============================================
+coverage/
+*.lcov
+.nyc_output/
+test-results/
+
+# ============================================
+# Misc
+# ============================================
+.npm
+.eslintcache
+.temp
+.tmp
+temp/
+tmp/
+*.orig
+*.bak
