--- a/backend/package.json
+++ b/backend/package.json
@@ -13,31 +13,32 @@
     "health-check": "curl http://localhost:3001/health"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.5.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.4.0",
-    "express-validator": "^7.0.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.4.0",
+    "express-slow-down": "^3.0.0",
+    "express-validator": "^7.0.1",
+    "google-auth-library": "^10.4.2",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "stripe": "^16.8.0",
     "winston": "^3.14.2",
-    "compression": "^1.7.4",
-    "dotenv": "^16.4.5",
-    "joi": "^17.13.3",
-    "express-mongo-sanitize": "^2.2.0",
-    "hpp": "^0.2.3",
-    "xss-clean": "^0.1.4",
-    "express-slow-down": "^3.0.0"
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "supertest": "^7.0.0",
-    "eslint": "^8.57.0"
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
